--- a/contact.html
+++ b/contact.html
@@ -54,11 +54,11 @@
 			    <div class="container">
 			    	<div class="row align-items-center justify-content-between d-flex">
 				      <div id="logo">
-				        <a href="index"><img src="img/logo.png" alt="" title="" /></a>
+				        <a href="joeyhentges.com"><img src="img/logo.png" alt="" title="" /></a>
 				      </div>
 				      <nav id="nav-menu-container">
 				        <ul class="nav-menu">
-				          <li class="menu-active"><a href="index">Home</a></li>
+				          <li class="menu-active"><a href="joeyhentges.com">Home</a></li>
 				          <li><a href="about">About Me</a></li>	
 				          <li><a href="contact">Contact</a></li>
 						  <li class="menu-has-children"><a href="">Computer Science Projects</a>
@@ -84,7 +84,7 @@
 							<h1 class="text-white">
 								Contact Me
 							</h1>	
-							<p class="text-white link-nav"><a href="index">Home </a>  <span class="lnr lnr-arrow-right"></span>  <a href="#"> Contact Me</a></p>
+							<p class="text-white link-nav"><a href="joeyhentges.com">Home </a>  <span class="lnr lnr-arrow-right"></span>  <a href="#"> Contact Me</a></p>
 						</div>											
 					</div>
 				</div>
