--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
 			    <div class="container">
 			    	<div class="row align-items-center justify-content-between d-flex">
 				      <div id="logo">
-				        <a href="joeyhentges.com"><img src="img/logo.png" alt="" title="" /></a>
+				        <a href="https://joeyhentges.com"><img src="img/logo.png" alt="" title="" /></a>
 				      </div>
 				      <nav id="nav-menu-container">
 				        <ul class="nav-menu">
-				          <li class="menu-active"><a href="joeyhentges.com">Home</a></li>
+				          <li class="menu-active"><a href="https://joeyhentges.com">Home</a></li>
 				          <li><a href="about">About Me</a></li>	
 				          <li><a href="contact">Contact</a></li>
 						  <li class="menu-has-children"><a href="">Computer Science Projects</a>
