--- a/about.html
+++ b/about.html
@@ -155,7 +155,7 @@
 								<div class="col-md-4">
 									<div class="single-defination">
 										<a title="Visit Edina's Website" href="https://www.edinaschools.org/edinahighschool" target="_blank"><h4 class="mb-0">Edina High School</h4></a>
-										<h6 class="mb-0">GED</h6>
+										<h6 class="mb-0">Diploma</h6>
 										<h6 class="mb-10">2013 - 2016</h6>
 										<p>Organizations: Club 212 Leadership Group</br>
 										Enroled in college courses at Normandale CC</p>
