--- a/about.html
+++ b/about.html
@@ -158,7 +158,7 @@
 										<h6 class="mb-0">Diploma</h6>
 										<h6 class="mb-10">2013 - 2016</h6>
 										<p>Organizations: Club 212 Leadership Group</br>
-										Enroled in college courses at Normandale CC</p>
+										Enrolled in college courses at Normandale CC</p>
 									</div>
 								</div>
 							</div>
