--- a/computer-science-projects/undergraduate/projects-1.html
+++ b/computer-science-projects/undergraduate/projects-1.html
@@ -68,6 +68,7 @@
 						<a class="dead-arrow" href="#"><i class="fa fa-arrow-left"></i></a>
 						<u><a class="" href="#">1</a></u>
 						<u><a class="not-page" href="projects-2">2</a></u>
+						<u><a class="not-page" href="projects-3">3</a></u>
 						<a class="" href="projects-2"><i class="fa fa-arrow-right"></i></a>
 		            </div>
 		            <div class="welcome">
@@ -2148,6 +2149,7 @@
 		                <a class="dead-arrow" href="#"><i class="fa fa-arrow-left"></i></a>
 						<u><a class="" href="#">1</a></u>
 						<u><a class="not-page" href="projects-2">2</a></u>
+						<u><a class="not-page" href="projects-3">3</a></u>
 						<a class="" href="projects-2"><i class="fa fa-arrow-right"></i></a>
                     </div>
 		        </section>
