--- a/computer-science-projects/undergraduate/projects-3.html
+++ b/computer-science-projects/undergraduate/projects-3.html
@@ -90,8 +90,8 @@
                     </div>
 					<div class="welcome">                      
                         <h2 class="twenty">Create and Manipulate Linked Lists Using Recursion</h2>
-						<p>This program shows the use of a sorting algorithm called Heap Sort.</p>
-                        <p>The algorithm sorts an array of values from smallest to largest in place (sorting the array without creating additional arrays).</p>
+						<p>This program shows the use of recursion to manipulate linked lists.</p>
+                        <p>The main recursive function in the list is traverse(Node start, int endIndex). It takes in a starting node, typically firstNode, and traverses to a given position. It returns the node at that position, which allows for easy variable editing on that particular node.</p>
 		            </div>					
 					<div class="welcome">       
                         <h2 class="twenty">Files Used / Created</h2>
