--- a/livestream.html
+++ b/livestream.html
@@ -108,7 +108,7 @@
 								Above, Click Play
 							</h1>
 							<p>
-								Whenever I am livestreaming an event, whether it be a sport, seminar, or something else, I will link to the stream here. If I'm not live, the link will take you to my home page. Click the play button above!
+								</br>Whenever I am livestreaming an event, whether it be a sport, seminar, or something else, I will link to the stream here. If I'm not live, the link will take you to my home page. Click the play button above!
 							</p>
 						</div>
 						<div class="col-lg-6 about-top-right">
