--- a/livestream.html
+++ b/livestream.html
@@ -68,7 +68,12 @@
 							  <li><a href="computer-science-projects/projects-selection" target="_blank">View All</a></li>
 				            </ul>
 				          </li>
-						  <li><a href="#">Graphic Design</a></li>	          
+						  <li class="menu-has-children"><a href="">Other Pages</a>
+				            <ul>
+				              <li><a href="#" target="_blank">Graphic Design</a></li>
+							  <li><a href="livestream" target="_blank">Livestream</a></li>
+				            </ul>
+				          </li>	          
 				        </ul>
 				      </nav><!-- #nav-menu-container -->		    		
 			    	</div>
@@ -84,7 +89,7 @@
 							<h1 class="text-white">
 								Livestream
 							</h1>	
-							<p class="text-white link-nav"><a href="https://joeyhentges.com">Home </a> <span class="lnr lnr-arrow-right"></span>  <a href="#">Livestream</a></p>
+							<p class="text-white link-nav"><a href="https://joeyhentges.com">Home </a> <span class="lnr lnr-arrow-right"></span> <a href="#">Other </a> <span class="lnr lnr-arrow-right"></span>  <a href="#">Livestream</a></p>
 						</div>											
 					</div>
 				</div>
