--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
 						  <li class="menu-has-children"><a href="">Other Pages</a>
 				            <ul>
 				              <li><a href="#" target="_blank">Graphic Design</a></li>
-							  <li><a href="livestream" target="_blank">Livestream</a></li>
+							  <li><a href="livestream">Livestream</a></li>
 				            </ul>
 				          </li>	         
 				        </ul>
