--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 								<div class="detail">
 									<a href="#"><h4>Graphic Designer</h4></a>
 									<p>
-										Work with companies to create various desired graphics; these include sports books, logos and livestream graphics.
+										Work with companies to create various desired graphics; these include sports programs, logos and livestream graphics.
 									</p>
 								</div>
 							</div>
