--- a/about.html
+++ b/about.html
@@ -129,7 +129,7 @@
 								Resume
 							</h1>
 							<p>
-								I'm interested in finding an internship or research opportunity that will allow me to utilize my problem solving skills and attention to detail to further develop my abilities and experience in the field of Computer Science or Mathematics.
+								I am currently looking for an internship or research opportunity that will allow me to use my problem solving skills and futher develop my abilities and experience in Computer Science and Mathematics.
 							</p>
 							<a href="Resume.pdf" target="_blank" class="primary-btn text-uppercase">View My Resume</a>
 						</div>					
