--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
 				          </li>
 						  <li class="menu-has-children"><a href="">Other Pages</a>
 				            <ul>
-				              <li><a href="#" target="_blank">Graphic Design</a></li>
+				              <li><a href="#">Graphic Design</a></li>
 							  <li><a href="livestream">Livestream</a></li>
 				            </ul>
 				          </li>	         
