--- a/contact.html
+++ b/contact.html
@@ -61,6 +61,7 @@
 				          <li class="menu-active"><a href="https://joeyhentges.com">Home</a></li>
 				          <li><a href="about">About Me</a></li>	
 				          <li><a href="contact">Contact</a></li>
+						  <li><a href="#">Software / Apps</a></li>
 						  <li class="menu-has-children"><a href="">Computer Science Projects</a>
 				            <ul>
 				              <li><a href="computer-science-projects/undergraduate/projects-1" target="_blank">University Undergraduate</a></li>
