--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
 								Built to display what I've done and what I'm working on. Take a look at my resume and feel free to contact me any time!</br>
 								I save as much code as I can, so look at my projects pages if you're interested in computer programming.
 							</p>
+							<a title="Go to The Livestream Page" href="livestream" class="primary-btn text-uppercase" hidden>Currently Live</a>
 							<a href="contact" class="primary-btn text-uppercase">Get In Contact</a>
 							<a href="computer-science-projects/projects-selection" target="_blank" class="primary-btn text-uppercase">My Projects</a>
 						</div>											
