--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 							</p>
 							<a title="Go to The Livestream Page" href="livestream" class="primary-btn text-uppercase" hidden>Currently Live</a>
 							<a href="contact" class="primary-btn text-uppercase">Get In Contact</a>
-							<a href="computer-science-projects/projects-selection" target="_blank" class="primary-btn text-uppercase">My Projects</a>
+							<a href="computer-science-projects/projects-selection" target="_blank" class="primary-btn text-uppercase">My Code</a>
 						</div>											
 					</div>
 				</div>					
