--- a/computer-science-projects/undergraduate/projects-3.html
+++ b/computer-science-projects/undergraduate/projects-3.html
@@ -1342,7 +1342,7 @@
 		                </ul>
 		            </div>					
 					<p class="addSpace">&nbsp;</p>
-					<h2 class="title">myStack Interface</h2>
+					<h2 class="title">myStack | Interface File</h2>
 					<p class="fifteen">This is the interface file for the stacks created using arrays and linked lists. Methods needed for a stack are declared here.</p>
 					<script type="syntaxhighlighter" class="brush: js">
 					/**
@@ -1389,7 +1389,7 @@
 					</script>
 					<section id="self-built-stacks-array">
 						<p class="addSpace">&nbsp;</p>
-						<h2 class="title">Stack Using Arrays</h2>
+						<h2 class="title">ArrayStack | Class File</h2>
 						<p class="fifteen">This is the class file for a stack using arrays.</p>
 						<script type="syntaxhighlighter" class="brush: js">
 						/**
@@ -1503,7 +1503,7 @@
 					</section>
 					<section id="self-built-stacks-linked-list">
 						<p class="addSpace">&nbsp;</p>
-						<h2 class="title">Stack Using Linked Lists</h2>
+						<h2 class="title">LinkedStack | Class File</h2>
 						<p class="fifteen">This is the class file for a stack using linked lists.</p>
 						<script type="syntaxhighlighter" class="brush: js">
 						/**
@@ -1643,7 +1643,7 @@
 		                </ul>
 		            </div>					
 					<p class="addSpace">&nbsp;</p>
-					<h2 class="title">myQueue Interface</h2>
+					<h2 class="title">myQueue | Interface File</h2>
 					<p class="fifteen">This is the interface file for the queues created using arrays and linked lists. Methods needed for a queue are declared here.</p>
 					<script type="syntaxhighlighter" class="brush: js">
 					/**
@@ -1690,7 +1690,7 @@
 					</script>
 					<section id="self-built-queue-array">
 						<p class="addSpace">&nbsp;</p>
-						<h2 class="title">Queue Using Arrays</h2>
+						<h2 class="title">ArrayQueue | Class File</h2>
 						<p class="fifteen">This is the class file for a queue using arrays.</p>
 						<script type="syntaxhighlighter" class="brush: js">				
 						/**
@@ -1850,7 +1850,7 @@
 					</section>
 					<section id="self-built-queue-linked-list">
 						<p class="addSpace">&nbsp;</p>
-						<h2 class="title">Queue Using Linked Lists</h2>
+						<h2 class="title">LinkedQueue | Class File</h2>
 						<p class="fifteen">This is the class file for a Queue using linked lists.</p>
 						<script type="syntaxhighlighter" class="brush: js">
 						/**
