--- a/computer-science-projects/undergraduate/projects-3.html
+++ b/computer-science-projects/undergraduate/projects-3.html
@@ -83,6 +83,8 @@
 		                
 		                <ul>
                             <li>Recursive Linked Lists</li>
+							<li>Stacks | Arrays & Linked Lists</li>
+							<li>Queues | Arrays & Linked Lists</li>
 		                </ul>
 		            </div>
 
