--- a/computer-science-projects/undergraduate/projects-3.html
+++ b/computer-science-projects/undergraduate/projects-3.html
@@ -132,7 +132,8 @@
 					   /** Adds a new entry to the end of this list.
 						   Entries currently in the list are unaffected.
 						   The list's size is increased by 1.
-						   @param newEntry  The object to be added as a new entry. */
+						   @param newEntry  The object to be added as a new entry. 
+						 */
 					   public void add(T newEntry);
 					   
 					   /** Adds a new entry at a specified position within this list.
