--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
 			<link rel="stylesheet" href="css/animate.min.css">
 			<link rel="stylesheet" href="css/owl.carousel.css">
 			<link rel="stylesheet" href="css/main.css">
+			
+		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+		<script>
+		  (adsbygoogle = window.adsbygoogle || []).push({
+			google_ad_client: "ca-pub-2847236736921913",
+			enable_page_level_ads: true
+		  });
+		</script>
 		</head>
 		<body>
 
