--- a/about.html
+++ b/about.html
@@ -144,9 +144,9 @@
 								<div class="col-md-4">
 									<div class="single-defination">
 										<a title="Visit Augsburg's Website" href="http://www.augsburg.edu/" target="_blank"><h4 class="mb-0">Augsburg University</h4></a>
-										<h6 class="mb-0">B.S. Computer Science & B.S. Mathematics</h6>
+										<h6 class="mb-0">B.S. Computer Science</h6>
 										<h6 class="mb-10">2018 - 2020</h6>
-										<p>Additionally: Minor in Communication Studies</br>
+										<p>Additionally: Minor in Mathematics & Communication Studies</br>
 										Organizations: AugSTEM Scholar*</p>
 									</div>
 								</div>
@@ -202,8 +202,18 @@
 								</div>
 							</div>
 							</br></br>
-							<u><h3 class="mb-15">Computer Programming Languages</h3></u>
+							<u><h3 class="mb-15">Computer Science</h3></u>
 							<div class="row">
+								<div class="col-sm-2">
+									<div class="single-defination">
+										<h4 class="mb-0">NodeJS</h4>
+									</div>
+								</div>
+								<div class="col-sm-2">
+									<div class="single-defination">
+										<h4 class="mb-0">Express</h4>
+									</div>
+								</div>
 								<div class="col-sm-2">
 									<div class="single-defination">
 										<h4 class="mb-0">Java</h4>
