--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 				          </li>
 						  <li class="menu-has-children"><a href="">Other Pages</a>
 				            <ul>
-				              <li><a href="#">Graphic Design</a></li>
+				              <li><a href="graphic-design">Graphic Design</a></li>
 							  <li><a href="livestream">Livestream</a></li>
 				            </ul>
 				          </li>		          
