--- a/graphic-design.html
+++ b/graphic-design.html
@@ -96,37 +96,13 @@
 			</section>
 			<!-- End banner Area -->	
 
-			<!-- Start about-top Area -->
-			<section class="about-top-area section-gap">
-				<div class="container">
-					<div class="row align-items-center">
-						<div class="col-lg-6 about-top-left">
-							<h1>
-								Everything <br>
-								You can imagine <br>
-								is right here
-							</h1>
-							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat duis aute irure dolor.
-							</p>
-						</div>
-						<div class="col-lg-6 about-top-right">
-							<img class="img-fluid" src="img/pages/at.jpg" alt="">
-						</div>
-					</div>
-				</div>	
-			</section>
-			<!-- End about-top Area -->
-			
-
 			<!-- Start service Area -->
 			<section class="service-area section-gap" id="service">
 				<div class="container">
 					<div class="row d-flex justify-content-center">
 						<div class="menu-content pb-70 col-lg-8">
 							<div class="title text-center">
-								<h1 class="mb-10">Our Offered Services</h1>
-								<p>Who are in extremely love with eco friendly system.</p>
+								<h1 class="mb-10">Sports Programs</h1>
 							</div>
 						</div>
 					</div>						
@@ -140,7 +116,7 @@
 									<div class="detail">
 										<a href="#"><h4>2018 Cake Eater Classic Program</h4></a>
 										<p>
-											The program book I created for Edina's 14th Annual Cake Eater Classic girls youth hockey tournament.
+											The program I created for Edina's 14th Annual Cake Eater Classic girls youth hockey tournament.
 										</p>
 									</div>
 								</div>
