--- a/graphic-design.html
+++ b/graphic-design.html
@@ -107,7 +107,7 @@
 						</div>
 					</div>						
 					<div class="row justify-content-center">
-						<a href="graphic-design/2018-edina-cake-eater-classic-program.pdf">
+						<a href="graphic-design/2018-edina-cake-eater-classic-program.pdf" target="_blank">
 							<div class="col-lg-4">
 								<div class="single-service">
 									<div class="thumb">
