--- a/graphic-design.html
+++ b/graphic-design.html
@@ -102,7 +102,7 @@
 					<div class="row d-flex justify-content-center">
 						<div class="menu-content pb-70 col-lg-8">
 							<div class="title text-center">
-								<h1 class="mb-10">Sports Programs</h1>
+								<h1 class="mb-10">Sports Programs (Books)</h1>
 							</div>
 						</div>
 					</div>						
