--- a/computer-science-projects/personal-business/projects-1.html
+++ b/computer-science-projects/personal-business/projects-1.html
@@ -557,7 +557,7 @@
 					<div class="welcome">       
                         <h2 class="twenty">Files Used / Created</h2>
                         <p>Download them below. Bold represents program files, unbold: input files.</p>
-						<p>The txt file, Stock_Symbols.txt, are the stocks that you want the program to watch / gather data on.</p>
+						<p>The txt file, Stock_Symbols.txt, are the stocks that you want the program to watch / gather data on. NOTE: each stock symbol must go on its own line.</p>
 						<p>The ZIP file, STOCK_WEB_SCRAPER.zip, is a zip file containing all of the files </p>
 		            </div>
 					<div class="script-source">
