--- a/graphic-design.html
+++ b/graphic-design.html
@@ -114,7 +114,7 @@
 										<img class="img-fluid" src="img/s1.jpeg" alt="">
 									</div>
 									<div class="detail">
-										<a href="#"><h4>2018 Cake Eater Classic Program</h4></a>
+										<a href="graphic-design/2018-edina-cake-eater-classic-program.pdf"><h4>2018 Cake Eater Classic Program</h4></a>
 										<p>
 											The program I created for Edina's 14th Annual Cake Eater Classic girls youth hockey tournament.
 										</p>
