--- a/graphic-design.html
+++ b/graphic-design.html
@@ -111,12 +111,27 @@
 							<div class="col-lg-4">
 								<div class="single-service">
 									<div class="thumb">
-										<img class="img-fluid" src="img/s1.jpeg" alt="">
+										<img class="img-fluid" src="img/2018-edina-cake-eater-classic-program.jpeg" alt="">
 									</div>
 									<div class="detail">
 										<a href="graphic-design/2018-edina-cake-eater-classic-program.pdf"><h4>2018 Cake Eater Classic Program</h4></a>
 										<p>
 											The program I created for Edina's 14th Annual Cake Eater Classic girls youth hockey tournament.
+										</p>
+									</div>
+								</div>
+							</div>
+						</a>
+						<a href="graphic-design/2018_2019-edina-invitational-program.pdf" target="_blank">
+							<div class="col-lg-4">
+								<div class="single-service">
+									<div class="thumb">
+										<img class="img-fluid" src="img/2018_2019-edina-invitational-program.jpeg" alt="">
+									</div>
+									<div class="detail">
+										<a href="graphic-design/2018_2019-edina-invitational-program.pdf"><h4>2018/2019 Invitational Program</h4></a>
+										<p>
+											The program I created for Edina's 50th Annual Invitational boys youth hockey tournament.
 										</p>
 									</div>
 								</div>
